remove ignite-ir-boilerplate and icons ignite plugin

--- a/boilerplate/ignite.json.ejs
+++ b/boilerplate/ignite.json.ejs
@@ -11,13 +11,6 @@
   "generators": {
     "entity": "ignite-jhipster",
     "import-jdl": "ignite-jhipster",
-    "upgrade": "ignite-jhipster",
-    "component": "ignite-ir-boilerplate",
-    "container": "ignite-ir-boilerplate",
-    "listview": "ignite-ir-boilerplate",
-    "list": "ignite-ir-boilerplate",
-    "redux": "ignite-ir-boilerplate",
-    "saga": "ignite-ir-boilerplate",
-    "screen": "ignite-ir-boilerplate"
+    "upgrade": "ignite-jhipster"
   }
 }
