--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -27,6 +27,7 @@
     "querystringify": "1.0.0",
     "ramda": "0.25.0",
     "react-native-config": "0.11.5",
+    "react-native-vector-icons": "4.6.0",
     "react-native-keyboard-aware-scroll-view": "0.4.4",
     "react-native-router-flux": "4.0.0-beta.28",
     "react-redux": "5.0.7",
