--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -50,6 +50,7 @@
     "buffer": "5.1.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
+    "ignite-jhipster": "<%= props.packageVersion %>",
     "jest": "22.4.2",
     "mockery": "2.1.0",
     "react-dom": "16.3.0-alpha.1",
