update dependencies other than react-native

--- a/boilerplate/App/Services/FixtureApi.js.ejs
+++ b/boilerplate/App/Services/FixtureApi.js.ejs
@@ -89,8 +89,8 @@ export default {
       ok: true
     }
   },
-  changePassword: ({password}) => {
-    if (password === 'valid-password') {
+  changePassword: ({currentPassword}) => {
+    if (currentPassword === 'valid-password') {
       return {
         ok: true
       }
