--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -43,10 +43,10 @@
     "@storybook/addon-storyshots": "3.4.10",
     "@storybook/channels": "3.4.10",
     "@storybook/react-native": "3.4.10",
-    "babel-core": "6.26.3",
+    "@babel/core": "7.0.0",
     "babel-plugin-ignite-ignore-reactotron": "0.3.0",
     "babel-preset-env": "1.7.0",
-    "babel-preset-react-native": "4.0.0",
+    "babel-preset-react-native": "5.0.2",
     "buffer": "5.2.1",
     "enzyme": "3.5.0",
     "enzyme-adapter-react-16": "1.3.1",
