--- a/boilerplate/Tests/Sagas/LoginSagaTest.js.ejs
+++ b/boilerplate/Tests/Sagas/LoginSagaTest.js.ejs
@@ -4,9 +4,9 @@ import { login, logout<% if (props.authType === 'jwt' || props.authType === 'oau
 import LoginActions from '../../App/Redux/LoginRedux'
 import AccountActions from '../../App/Redux/AccountRedux'
 <%_ if (props.authType === 'oauth2') { _%>
-var reference = require('../../App/Lib/GenerateNonce');
+var reference = require('../../App/Lib/GenerateNonce')
 reference.generateNonce = function () {
-  return 'test-nonce';
+  return 'test-nonce'
 }
 <%_ } _%>
 
