re-enabled StoriesTest

--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -68,8 +68,7 @@
     ],
     "testPathIgnorePatterns":[
       "/node_modules/",
-      "Tests/Setup.js",
-      "Tests/StoriesTest.js"
+      "Tests/Setup.js"
     ],
     "moduleNameMapper": {
       "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy"
