update paths to match new layout

--- a/boilerplate/app/shared/services/fixture-api.js.ejs
+++ b/boilerplate/app/shared/services/fixture-api.js.ejs
@@ -67,13 +67,13 @@ export default {
   getOauthInfo: () => {
     return {
       ok: true,
-      data: require('../fixtures/getOauthInfo.json')
+      data: require('../fixtures/get-oauth-info.json')
     }
   },
   getOauthIssuerInfo: () => {
     return {
       ok: true,
-      data: require('../fixtures/getOauthIssuerInfo.json')
+      data: require('../fixtures/get-oauth-issuer-info.json')
     }
   },
   <%_ } _%>
@@ -105,7 +105,7 @@ export default {
     return {
       ok: true,
       status: 200,
-      data: require('../fixtures/getAccount.json')
+      data: require('../fixtures/get-account.json')
     }
   },
   updateAccount: () => {
