fix oauth2 templating

--- a/templates/jhipster/oauth2/OAuth2SsoConfiguration.java.ejs
+++ b/templates/jhipster/oauth2/OAuth2SsoConfiguration.java.ejs
@@ -16,9 +16,9 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -%>
-package <%=packageName%>.config;
+package <%=props.packageName%>.config;
 
-import <%=packageName%>.security.AuthoritiesConstants;
+import <%=props.packageName%>.security.AuthoritiesConstants;
 
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.autoconfigure.security.oauth2.client.EnableOAuth2Sso;
