--- a/templates/jhipster/oauth2/ResourceServerConfiguration.java.ejs
+++ b/templates/jhipster/oauth2/ResourceServerConfiguration.java.ejs
@@ -16,9 +16,9 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -%>
-package <%=packageName%>.config;
+package <%=props.packageName%>.config;
 
-import <%=packageName%>.security.AuthoritiesConstants;
+import <%=props.packageName%>.security.AuthoritiesConstants;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
