--- a/templates/entity-flatlist.ejs
+++ b/templates/entity-flatlist.ejs
@@ -2,7 +2,8 @@ import React from 'react'
 import { FlatList, Text, TouchableOpacity, View } from 'react-native'
 import { connect } from 'react-redux'
 import <%= props.name %>Actions from '../Redux/<%= props.name %>Redux'
-import { Actions as NavigationActions } from 'react-native-router-flux' // eslint-disable-line
+import { Navigation } from 'react-native-navigation'
+import { <%= camelCase(props.name) %>EntityDetailScreen, <%= camelCase(props.name) %>EntityEditScreen } from '../Navigation/Layouts'
 <%_ if (props.searchEngine) { _%>
 import SearchBar from '../Components/SearchBar'
 <%_ } _%>
@@ -16,32 +17,31 @@ import AlertMessage from '../Components/AlertMessage'
 import styles from './Styles/<%= props.name %>EntityScreenStyle'
 
 class <%= props.name %>EntityScreen extends React.PureComponent {
-  static onEnter () {
-    NavigationActions.refresh({
-      rightTitle: 'Create',
-      onRight: () => {
-        NavigationActions.<%= camelCase(props.name) %>EntityEdit({ entityId: null })
-      }
-    })
+  constructor (props) {
+    super(props)
+    Navigation.events().bindComponent(this)
+
+    /* ***********************************************************
+    * STEP 1
+    * This is an array of objects with the properties you desire
+    * Usually this should come from Redux mapStateToProps
+    *************************************************************/
+    this.state = {
+      page: 0,
+      sort: 'id,asc',
+      size: 20,
+      loading: true,
+      done: false,
+      <%_ if (props.searchEngine) { _%>
+      searchTerm: '',
+      <%_ } _%>
+      dataObjects: []
+    }
   }
 
-  /* ***********************************************************
-  * STEP 1
-  * This is an array of objects with the properties you desire
-  * Usually this should come from Redux mapStateToProps
-  *************************************************************/
-  state = {
-    page: 0,
-    sort: 'id,asc',
-    size: 20,
-    loading: true,
-    done: false,
-    <%_ if (props.searchEngine) { _%>
-    searchTerm: '',
-    <%_ } _%>
-    dataObjects: []
+  navigationButtonPressed ({ buttonId }) {
+    <%= camelCase(props.name) %>EntityEditScreen({ entityId: null })
   }
-
   /* ***********************************************************
   * STEP 2
   * `renderRow` function. How each cell/row should be rendered
@@ -52,7 +52,7 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
   *************************************************************/
   renderRow ({item}) {
     return (
-      <TouchableOpacity onPress={NavigationActions.<%= camelCase(props.name) %>EntityDetail.bind(this, { entityId: item.id })}>
+      <TouchableOpacity onPress={<%= camelCase(props.name) %>EntityDetailScreen.bind(this, { entityId: item.id })}>
         <View style={styles.row}>
           <Text style={styles.boldLabel}>{item.id}</Text>
           {/* <Text style={styles.label}>{item.description}</Text> */}
@@ -89,7 +89,7 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
   // The default function if no Key is provided is index
   // an identifiable key is important if you plan on
   // item reordering.  Otherwise index is fine
-  keyExtractor = (item, index) => String(index)
+  keyExtractor = (item, index) => `${index}`
 
   // How many items should be kept im memory as we scroll?
   oneScreensWorth = 20
