--- a/templates/entity-edit-screen.ejs
+++ b/templates/entity-edit-screen.ejs
@@ -33,6 +33,14 @@ class <%= props.name %>EntityEditScreen extends React.Component {
                 let nextFieldName = props.entityConfig.fields[index + 1].fieldName
             _%>
           <%= field.fieldName %>: {
+            <%_ if (field.fieldType === 'LocalDate') { _%>
+            mode: 'date',
+            config: {
+              format: date => ("0" + (date.getMonth() + 1).toString()).substr(-2) + "/" + ("0" + date.getDate().toString()).substr(-2)  + "/" + (date.getFullYear().toString()).substr(2)
+            },
+            <%_ } else { _%>
+            mode: 'time',
+            <%_ } _%>
             returnKeyType: 'next',
             onSubmitEditing: () => this.refs.form.getComponent('<%= nextFieldName %>').refs.input.focus()
           },
