--- a/templates/entity-detail-screen.ejs
+++ b/templates/entity-detail-screen.ejs
@@ -4,6 +4,7 @@ import { connect } from 'react-redux'
 import <%= props.name %>Actions from '../Redux/<%= props.name %>Redux'
 import RoundedButton from '../Components/RoundedButton'
 import { Actions as NavigationActions } from 'react-native-router-flux'
+import { jsDateToLocalDate } from '../Transforms/DateTransforms'
 
 // Styles
 import styles from './Styles/<%= props.name %>EntityDetailScreenStyle'
@@ -32,7 +33,11 @@ class <%= props.name %>EntityDetailScreen extends React.Component {
       <ScrollView style={styles.container}>
         <Text>ID: {this.state.<%= camelCase(props.name) %>.id}</Text>
         <%_ props.entityConfig.fields.forEach(function (field) { _%>
+        <%_ if (field.fieldType === 'LocalDate') { _%>
+        <Text><%= upperFirst(field.fieldName) %>: {jsDateToLocalDate(this.state.<%= camelCase(props.name) %>.<%= field.fieldName %>)}</Text>
+        <%_ } else { _%>
         <Text><%= upperFirst(field.fieldName) %>: {this.state.<%= camelCase(props.name) %>.<%= field.fieldName %>}</Text>
+        <%_ } _%>
         <%_ }) _%>
         <RoundedButton text='Edit' onPress={NavigationActions.<%= camelCase(props.name) %>EntityEdit.bind(this, { entityId: this.state.<%= camelCase(props.name) %>.id })} />
       </ScrollView>
