--- a/templates/entity-edit-screen.ejs
+++ b/templates/entity-edit-screen.ejs
@@ -4,6 +4,7 @@ import { connect } from 'react-redux'
 import <%= props.name %>Actions from '../Redux/<%= props.name %>Redux'
 import { Actions as NavigationActions } from 'react-native-router-flux'
 import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view'
+import { jsDateToLocalDate } from '../Transforms/DateTransforms'
 
 import t from 'tcomb-form-native'
 
@@ -36,9 +37,9 @@ class <%= props.name %>EntityEditScreen extends React.Component {
             <%_ if (field.fieldType === 'LocalDate') { _%>
             mode: 'date',
             config: {
-              format: date => ("0" + (date.getMonth() + 1).toString()).substr(-2) + "/" + ("0" + date.getDate().toString()).substr(-2)  + "/" + (date.getFullYear().toString()).substr(2)
+              format: date => jsDateToLocalDate(date)
             },
-            <%_ } else { _%>
+            <%_ } else if (field.fieldType === 'Instant' || field.fieldType === 'ZonedDateTime') { _%>
             mode: 'time',
             <%_ } _%>
             returnKeyType: 'next',
