--- a/templates/entity-flatlist.ejs
+++ b/templates/entity-flatlist.ejs
@@ -89,7 +89,7 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
   // The default function if no Key is provided is index
   // an identifiable key is important if you plan on
   // item reordering.  Otherwise index is fine
-  keyExtractor = (item, index) => index
+  keyExtractor = (item, index) => String(index)
 
   // How many items should be kept im memory as we scroll?
   oneScreensWorth = 20
