--- a/templates/saga.ejs
+++ b/templates/saga.ejs
@@ -1,7 +1,10 @@
 import { call, put } from 'redux-saga/effects'
 import <%= props.name %>Actions from '../Redux/<%= props.name %>Redux'
 import { callApi } from './CallApiSaga'
+<%_ if (props.entityContainsLocalDate) { _%>
 import { localDateToJsDate } from '../Transforms/DateTransforms'
+<%_ } _%>
+
 export function * get<%= props.name %> (api, action) {
   const { <%= camelCase(props.name) %>Id } = action
   // make the call to the api
