--- a/boilerplate/App/Services/Api.js.ejs
+++ b/boilerplate/App/Services/Api.js.ejs
@@ -72,6 +72,12 @@ const create = (baseURL = AppConfig.apiUrl) => {
   const getAccount = () => api.get(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/account')
   const updateAccount = (account) => api.post(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/account', account)
   const changePassword = (currentPassword, newPassword) => api.post(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/account/change-password', {currentPassword, newPassword}, {headers: {'Content-Type': 'application/json', 'Accept': 'application/json, text/plain, */*'}})
+
+  const getUser = (userId) => api.get('api/users/' + userId)
+  const getUsers = (options) => api.get('api/users', options)
+  const createUser = (user) => api.post('api/users', user)
+  const updateUser = (user) => api.put('api/users', user)
+  const deleteUser = (userId) => api.delete('api/users/' + userId)
   // ignite-jhipster-api-method-needle
 
   // ------
@@ -88,6 +94,11 @@ const create = (baseURL = AppConfig.apiUrl) => {
   //
   return {
     // a list of the API functions from step 2
+    createUser,
+    updateUser,
+    getUsers,
+    getUser,
+    deleteUser,
     // ignite-jhipster-api-export-needle
     <%_ if (props.authType === 'session' || props.authType === 'uaa') { _%>
     logout,
