--- a/templates/entity-detail-screen.ejs
+++ b/templates/entity-detail-screen.ejs
@@ -37,6 +37,8 @@ class <%= props.name %>EntityDetailScreen extends React.Component {
         <%_ props.entityConfig.fields.forEach(function (field) { _%>
         <%_ if (field.fieldType === 'LocalDate') { _%>
         <Text><%= upperFirst(field.fieldName) %>: {jsDateToLocalDate(this.state.<%= camelCase(props.name) %>.<%= field.fieldName %>)}</Text>
+        <%_ } else if (field.fieldType === 'ZonedDateTime') { _%>
+        <Text><%= upperFirst(field.fieldName) %>: {String(this.state.<%= camelCase(props.name) %>.<%= field.fieldName %>)}</Text>
         <%_ } else { _%>
         <Text><%= upperFirst(field.fieldName) %>: {this.state.<%= camelCase(props.name) %>.<%= field.fieldName %>}</Text>
         <%_ } _%>
