--- a/templates/entity-edit-screen.ejs
+++ b/templates/entity-edit-screen.ejs
@@ -138,7 +138,11 @@ class <%= props.name %>EntityEditScreen extends React.Component {
       <%= field.fieldName %>: value.<%= field.fieldName %> || null<%=  props.entityConfig.relationships.length || index !== props.entityConfig.entities.length - 1 ? ',' : '' %>
       <%_ }) _%>
       <%_ props.entityConfig.relationships.forEach((relation, index) => { _%>
+      <%_ if (props.entityConfig.dto === 'no') { _%>
       <%= relation.otherEntityName %>Id: (value.<%= relation.otherEntityName %> && value.<%= relation.otherEntityName %>.id) ? value.<%= relation.otherEntityName %>.id : null<%= index !== props.entityConfig.relationships.length - 1 ? ',' : '' %>
+      <%_ } else if (props.entityConfig.dto === 'mapstruct') { _%>
+      <%= relation.otherEntityName %>Id: value.<%= relation.otherEntityName %>Id || null<%= index !== props.entityConfig.relationships.length - 1 ? ',' : '' %>
+      <%_ } _%>
       <%_ }) _%>
     }
   }
@@ -149,9 +153,13 @@ class <%= props.name %>EntityEditScreen extends React.Component {
       <%= field.fieldName %>: value.<%= field.fieldName %> || null<%=  props.entityConfig.relationships.length || index !== props.entityConfig.entities.length - 1 ? ',' : '' %>
       <%_ }) _%>
       <%_ props.entityConfig.relationships.forEach((relation, index) => { _%>
+      <%_ if (props.entityConfig.dto === 'no') { _%>
       <%= relation.otherEntityName %>: {
         id: value.<%= relation.otherEntityName %>Id || null
       }<%= index !== props.entityConfig.relationships.length - 1 ? ',' : '' %>
+      <%_ } else if (props.entityConfig.dto === 'mapstruct') { _%>
+      <%= relation.otherEntityName %>Id: value.<%= relation.otherEntityName %>Id || null
+      <%_ } _%>
     <%_ }) _%>
     }
   }
